change admin dashboard/customer detail
